# NNBenchmark

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/edvardzeng/nnbenchmark/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/edvardzeng/nnbenchmark/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/edvardzeng/nnbenchmark/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ncnnlibrary/: CMakeLists.txt  build.gradle
ncnnlibrary/libs/ncnn-cpu-0507/arm64-v8a/include/ncnn/: platform.h
ncnnlibrary/src/main/: AndroidManifest.xml
ncnnlibrary/src/main/assets/: mobilenet_v2_int8.param  mobilenet_v2_opt.param
ncnnlibrary/src/main/cpp/: ncnn_classifier_jni.cpp  ncnn_classifier_jni.h
ncnnlibrary/src/main/java/com/edvardzeng/ncnnlibrary/: NCNNINterpreter.java
tnnlibrary/: CMakeLists.txt  build.gradle
tnnlibrary/src/main/: AndroidManifest.xml
tnnlibrary/src/main/assets/Models/: model.quantized.tnnmodel  model.quantized.tnnproto
tnnlibrary/src/main/cpp/cc/: Classifier.cc  Classifier.h  classifier_jni.cc  classifier_jni.h  helper_jni.cc  helper_jni.h  tnn_sdk.cc  tnn_sdk.h
tnnlibrary/src/main/java/com/tencent/tnn/interpret/: Classifier.java  FileUtils.java  Logger.java  TNNInterpreter.java
